--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 doc/* linguist-vendored
 javadoc/* linguist-vendored
-javadoc from GridWorld/* linguist-vendored
+javadoc_from_GridWorld/* linguist-vendored
